--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Login - IT22083678</title>
+    <title>Login - IT23228344</title>
     <link rel="stylesheet" href="styles.css">
     <style>
       
@@ -150,7 +150,7 @@
 
     
     <footer>
-        <p>&copy;Design By Theekshana Sahan  ||  IT22083678 SAHAN H P T  ||  All rights reserved</p>
+        <p>&copy;Design By Vikum Theekshana Dahanayake  ||  IT23228344 Dahanayake V.T  ||  All rights reserved</p>
     </footer>
 
     <script>
